[metadata]
name = essential
version = 0.0.1
author = Gaolichuan
author-email = gaolichuang@gmail.com
summary = Essential Python libraries and services
description-file =
    README.md
home-page = https://github.com/gaolichuang/py-essential
classifier =
    Development Status :: 1 - Beta
    Environment :: Python
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    essential
namespace_packages =
    essential

[global]
setup-hooks =

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
